--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
   </section>
   <!-- Footer -->
   <footer class="bg-white py-4 text-center fade-in">
-    <p>© 2025 Manohar Kumar Ray. All Rights Reserved.</p>
+    <p>© 2024-2025 : Manohar Kumar Ray. All Rights Reserved.</p>
   </footer>
 </body>
 </html>
