--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </video>
     <div class="text-center relative z-10 fade-in">
       <h1 class="text-4xl font-bold mb-4">Manohar Kumar Ray</h1>
-      <p class="text-xl mb-6">Dynamic Professional | Client Relationship & Business Operations Specialist</p>
+      <p class="text-xl mb-6">Experienced Professional in Client Services & Business Operations</p>
       <img alt="Professional photo of a developer with a friendly smile, wearing a casual shirt, standing against a plain background" class="mx-auto rounded-full mb-6" src="https://t3.ftcdn.net/jpg/07/13/35/82/360_F_713358254_pM12hayFvGkMbXwU1wERawwC2Tu3Mfpy.jpg"/>
       <a class="bg-green-500 text-white px-6 py-3 rounded-full hover:bg-green-600 transition duration-300 bounce" href="https://drive.google.com/file/d/1H_pSSxT9WcCvv218AN-iywvCKjZXylnx/view?usp=sharing">Download Resume</a>
     </div>
