--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="wIhP6LzQGBa0jAwPf0J1_CcCcoiggYIj1aLRPM0pAAw" />
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <title>Manohar Kumar Ray - Portfolio</title>
